hphp/test/slow/class_type_constant/recursion_type_structure_classname.php.expectf
Fatal error: Cannot declare self-referencing type constant 'A::B' in %s/recursion_type_structure_classname.php on line 9
